retrieveUnpackaged/objects/event_data__c.object
<CustomObject>
    <fields>
        <fullName>Event_Date_c__c</fullName>
        <label>Event_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Description_c__c</fullName>
        <label>Event_Description__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location_c__c</fullName>
        <label>Event_Location__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name_c__c</fullName>
        <label>Event_Name__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees_c__c</fullName>
        <label>Number_of_Attendees__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizer_Email_c__c</fullName>
        <label>Organizer_Email__c</label>
        <type>Email</type>
    </fields>
    <label>event_data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Name_c__c</columns>
        <columns>Event_Date_c__c</columns>
        <columns>Event_Location_c__c</columns>
        <columns>Number_of_Attendees_c__c</columns>
        <columns>Organizer_Email_c__c</columns>
        <columns>Event_Description_c__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>event_data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>event_data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>